objects/bre__BR_Event__c.object
<CustomObject>
    <fields>
        <fullName>bre__BR_Events_Zone__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Zone</label>
        <referenceTo>bre__BR_Events_Zone__c</referenceTo>
        <relationshipLabel>BR Events</relationshipLabel>
        <relationshipName>BR_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>bre__Description__c</fullName>
        <label>Description</label>
        <length>131072</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>bre__Draft__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Draft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bre__Enable_registration_for_guests__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable registration for guests</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bre__End_Date__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bre__Enrollment_not_required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enrollment not required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bre__Event_Preferences_Form_Fieldset__c</fullName>
        <label>Event Preferences Form Fieldset</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bre__Hide_attendees__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide attendees</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bre__Limit_of_attendees__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Zero means unlimited.</inlineHelpText>
        <label>Limit of attendees</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>bre__List_Image_Filename__c</fullName>
        <label>List Image Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bre__Location__c</fullName>
        <label>Location</label>
        <scale>7</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>bre__Main_Image_Filename__c</fullName>
        <label>Main Image Filename</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bre__Publicly_available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Publicly available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bre__Reminder_Hours__c</fullName>
        <defaultValue>&quot;1;24;168;&quot;</defaultValue>
        <label>Reminder Hours</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>bre__Send_reminders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Send reminders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bre__Start_Date__c</fullName>
        <label>Start Date</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>bre__Ticket_Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Ticket Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bre__Timezone__c</fullName>
        <label>Timezone to show to public</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>(GMT+14:00) Line Is. Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+13:45) Chatham Daylight Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+13:00) Phoenix Is. Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+13:00) Tonga Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+13:00) New Zealand Daylight Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:45) Chatham Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) Petropavlovsk-Kamchatski Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) New Zealand Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+12:00) Fiji Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:00) Solomon Is. Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:00) Norfolk Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:00) Lord Howe Daylight Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+11:00) Australian Eastern Daylight Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:30) Lord Howe Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:30) Australian Central Daylight Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+10:00) Australian Eastern Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:30) Australian Central Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:00) Korea Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+09:00) Japan Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Hong Kong Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Malaysia Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Philippines Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) China Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Singapore Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+08:00) Australian Western Standard Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) Indochina Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+07:00) West Indonesia Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:30) Myanmar Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+06:00) Bangladesh Time</fullName>
                </value>
                <value>
                    <fullName>(GMT+05:45) Nepal Time</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>bre__Unlisted_Event__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Unlisted Event</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>bre__Venue_Address__c</fullName>
        <label>Venue Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>AC Event</label>
    <listViews>
        <fullName>bre__All</fullName>
        <columns>NAME</columns>
        <columns>bre__Start_Date__c</columns>
        <columns>bre__End_Date__c</columns>
        <columns>bre__Venue_Address__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Event Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>